add buttons and change the home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: white;
+  background-image:"https://source.unsplash.com/random/1600x900/daily" ;
 }
 
 .App-logo {
